# lead-matrix

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: config.py  main.py
backend/app/agent/: estimation.py  graph.py  nodes.py  prompts.py  qualification.py  runner.py  state.py
backend/app/api/: chat.py  debug.py  health.py
backend/app/db/: base.py  models.py  repositories.py  session.py  types.py
backend/app/llm/: factory.py  interface.py  openai_client.py  traced.py
backend/app/observability/: logging.py
backend/app/schemas/: events.py
backend/tests/: test_qualification.py
backend/tests/eval/: fake_llm.py  scenarios.yaml  test_scenarios.py
docs/: agent-graph.md
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/api/: streamingClient.ts
frontend/src/components/: ChatWindow.tsx  DebugPanel.tsx  MessageBubble.tsx  MessageInput.tsx  TypingIndicator.tsx
frontend/src/hooks/: useChat.ts
frontend/src/styles/: chat.css
frontend/src/types/: chat.ts
postgres/: init.sql
