[project]
name = "lead-matrix-backend"
version = "0.1.0"
description = "Strategic Lead Matrix — AI-driven commercial energy lead qualification"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # Settings & validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",

    # Environment
    "python-dotenv>=1.0.1",

    # Observability
    "structlog>=24.4.0",

     # Database & cache clients
    "asyncpg>=0.30.0",
    "redis>=5.2.0",

    # ORM & migrations
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",

     # LLM
    "openai>=1.54.0",

      # Agent orchestration
    "langgraph>=0.2.50",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",  # for FastAPI TestClient
    "ruff>=0.7.0",    # linter + formatter
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"